--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,5 @@
 html {
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Quando', serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
@@ -92,7 +92,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Quando', serif;
   font-size: 1em;
 }
 figure {
@@ -183,7 +183,7 @@ textarea {
   font: inherit;
 }
 html {
-  font: 112.5%/1.45em 'Roboto Slab', serif;
+  font: 112.5%/1.45em 'Quando', serif;
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -198,7 +198,7 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Quando', serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
@@ -228,7 +228,7 @@ h1 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Quando', serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
@@ -244,7 +244,7 @@ h2 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Quando', serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.62671rem;
@@ -260,7 +260,7 @@ h3 {
   margin-top: 2rem;
   margin-bottom: -0.5rem;
   color: inherit;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Quando', serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.38316rem;
@@ -276,7 +276,7 @@ h4 {
   margin-top: 2rem;
   margin-bottom: -1rem;
   color: inherit;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Quando', serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1rem;
@@ -292,7 +292,7 @@ h5 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Quando', serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.85028rem;
@@ -308,7 +308,7 @@ h6 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Quando', serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.78405rem;
